Keep deterministic ordering tests Java 8 compatible